# advent_of_code

./: .gitignore  .pdm.toml  README.md  helper.py  pyproject.toml
01/: aoc_2021_1_1.py  aoc_2021_1_2.py
02/: aoc_2021_2_1.py  aoc_2021_2_2.py
03/: aoc_2021_3_1.py  aoc_2021_3_2.py
04/: aoc_2021_4_1.py
05/: aoc_2021_5_1.py  aoc_2021_5_2.py
06/: aoc_2021_6_1.py  aoc_2021_6_2.py
07/: aoc_2021_7_1.py
08/: aoc_2021_8_1.py
09/: aoc_2021_9_1.py
10/: aoc_2021_10_1.py  aoc_2021_10_2.py
11/: aoc_2021_11_1.py
15/: aoc_2021_15_1.py
2021/: aoc-2021_01-1.py  aoc-2021_01-2.py  aoc-2021_03-2.py  aoc-2021_04-2.py  aoc-2021_07-2.py  aoc-2021_11-1.py  aoc-2021_11-2.py  aoc_2021_01_1.py  aoc_2021_01_2.py  aoc_2021_02_1.py  aoc_2021_02_2.py  aoc_2021_03_1.py  aoc_2021_03_2.py  aoc_2021_04_1.py  aoc_2021_04_2.py  aoc_2021_05_1.py  aoc_2021_05_2.py  aoc_2021_06_1.py  (+14 more)
go/: go.mod
python/: pyproject.toml
python/advent_of_code/: helper.py
python/advent_of_code/2021/: aoc_2021_01_2.py  aoc_2021_03_2.py  aoc_2021_04_1.py  aoc_2021_05_1.py  aoc_2021_08_1.py  aoc_2021_08_2.py  aoc_2021_09_2.py  aoc_2021_11_2.py  aoc_2021_12_1.py  aoc_2021_15_1.py
python/advent_of_code/2022/: aoc_2022_01_2.py  aoc_2022_02_1.py  aoc_2022_02_2.py  aoc_2022_04_1.py  aoc_2022_07.py  aoc_2022_08.py  aoc_2022_09_1.py  aoc_2022_09_2.py  aoc_2022_11_2.py  aoc_2022_12_1.py  aoc_2022_13_1.py
python/advent_of_code/2023/: aoc_2023_02_2.py  aoc_2023_03_2.py  aoc_2023_04_2.py  aoc_2023_05_1.py  aoc_2023_06_1.py  aoc_2023_06_2.py  aoc_2023_08_1.py  aoc_2023_08_2.py  aoc_2023_10_1.py  aoc_2023_14_2.py  aoc_2023_15_2.py  aoc_2023_16_1.py  aoc_2023_21_2b.py
(+205 files in other folders)
