[project]

dependencies = [
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "scipy>=1.9.3",
    "pandas>=1.5.2",
    "numpy>=1.23.5",
    "matplotlib>=3.6.2",
    "pathfinding>=1.0.1",]

requires-python = ">=3.10"
license = {text = "MIT"}

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"