[project]

dependencies = [
    "black>=20.0",
    "ruff>=0.0.275",
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "scipy>=1.9.3",
    "pandas>=1.5.2",
    "numpy>=1.23.5",
    "matplotlib>=3.6.2",
    "pathfinding>=1.0.1",
    "networkx[all]>=3.1",
    "pytest>=7.4.3",
]

requires-python = ">=3.9, <3.10"
license = {text = ""}

[tool]
[tool.pdm]

[tool.pdm.scripts]
black = "black ."


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


