[project]
name = "advent-of-code"
version = "3.0.0"

dependencies = [
    "ruff>=0.1.7",
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "scipy>=1.9.3",
    "pandas>=1.5.2",
    "numpy>=1.23.5",
    "matplotlib>=3.6.2",
    "pathfinding>=1.0.1",
    "networkx[all]>=3.1",
    "pytest>=7.4.3",
    "tqdm>=4.66.1",
]

requires-python = ">=3.9, <3.10"
license = {text = "MyLicense"}

[tool]
[tool.pdm]


[tool.pdm.scripts]
black = "black ."


[tool.ruff]
extend-exclude = [
    ".txt",
]

extend-select = [
    "E203",
]

line-length = 80
indent-width = 4
target-version = "py39"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


